--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,13 @@ News-App/.env
 uni-server/node_modules
 uni-server/.env
 uni-server/.env-dev
+
+.bash_history
+.bash_logout
+.bashrc
+.gitconfig
+.gitignore
+.lesshst
+.profile
+.sudo_as_admin_successful
+.viminfo
