--- a/News-App/package.json
+++ b/News-App/package.json
@@ -45,7 +45,8 @@
   },
   "devDependencies": {
     "@eslint/js": "^9.38.0",
-    "eslint": "^9.38.0",
+    "eslint": "^8.57.1",
+    "eslint-config-react-app": "^7.0.1",
     "eslint-plugin-react": "^7.37.5",
     "globals": "^16.4.0"
   }
