--- a/uni-server/.env
+++ b/uni-server/.env
@@ -1,5 +1,5 @@
 # Database Configuration for development environment, make sure to update these values as per your local setup -RKS
-DB_USER=postgres
+DB_USER=debi
 DB_PASSWORD=9090
 DB_HOST=localhost
 DB_PORT=5432
