--- a/backend/.env
+++ b/backend/.env
@@ -1,7 +1,7 @@
 # Database Configuration for development environment, make sure to update these values as per your local setup -RKS
 DB_USER=debi
 DB_PASSWORD=9090
-DB_HOST=localhost
+DB_HOST=postgres-db
 DB_PORT=5432
 DB_NAME=akrutidev
 
