--- a/frontend/.env
+++ b/frontend/.env
@@ -1,2 +1,4 @@
-REACT_APP_API_URL=http://13.235.247.22:3001
+#use this ip address for internal communication
+REACT_APP_API_URL=http://backend-service:3001
+# REACT_APP_API_URL=http://13.235.247.22:3001
 
