--- a/frontend-deployment.yaml
+++ b/frontend-deployment.yaml
@@ -6,7 +6,7 @@ kind: ConfigMap
 metadata:
   name: frontend-config
 data:
-  REACT_APP_API_URL: "http://backend-service:3001"
+  REACT_APP_API_URL: "http://192.168.101.71:32001"
 
 ---
 # ==========================
