--- a/.github/workflows/docker-build.yml
+++ b/.github/workflows/docker-build.yml
@@ -1,67 +1,75 @@
-name: Build & push multi-arch Docker images 
+name: Build and push multi-arch Docker images
 
 on:
-  push: 
-    branches: [main]
+  push:
+    branches: [ main]
   workflow_dispatch:
 
 env:
-  IMAGE_NAMESPACES: ${{secrets.DOCKERHUB_USERNAME}}
+  # Namespace (DockerHub repo owner)
+  IMAGE_NAMESPACE: ${{ secrets.DOCKERHUB_USERNAME }}
 
 jobs:
+  # 1️⃣ prepare builder
   setup-buildx:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
-        uses: action/checkout@v4
+        uses: actions/checkout@v4
+
       - name: Enable QEMU for multi-arch builds
         uses: docker/setup-qemu-action@v3
-      - name: Setup Docker Buildx builder
+
+      - name: Set up Docker Buildx builder
         uses: docker/setup-buildx-action@v2
         with:
           driver: docker-container
           install: true
-  
 
+  # 2️⃣ backend image
   build-backend:
     needs: setup-buildx
     runs-on: ubuntu-latest
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
-      - name: Login to DockerHub 
+
+      - name: Login to DockerHub
         uses: docker/login-action@v2
-        with: 
-          username: ${{secrets.DOCKERHUB_USERNAME}}
-          password: ${{secrets.DOCKERHUB_TOKEN}}
-      - name: Build & push backend image(multi-arch)
+        with:
+          username: ${{ secrets.DOCKERHUB_USERNAME }}
+          password: ${{ secrets.DOCKERHUB_TOKEN }}
+
+      - name: Build & push backend image (multi-arch)
         uses: docker/build-push-action@v5
         with:
           context: ./backend
           file: ./backend/Dockerfile
           push: true
+          # Build for both amd64 and arm64
           platforms: linux/amd64,linux/arm64
+          # Custom tags
           tags: |
-            ${{env.IMAGE_NAMESPACES}}/backend-gh-build-arm64:latest
-            ${{env.IMAGE_NAMESPACES}}/backend-gh-build-arm64:${{ github.sha }}
+            ${{ env.IMAGE_NAMESPACE }}/backend-gh-build-arm64:latest
+            ${{ env.IMAGE_NAMESPACE }}/backend-gh-build-arm64:${{ github.sha }}
           cache-from: type=gha
           cache-to: type=gha,mode=max
 
-
-#frontend image
+  # 3️⃣ frontend image
   build-frontend:
     needs: setup-buildx
     runs-on: ubuntu-latest
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
+
       - name: Login to DockerHub
         uses: docker/login-action@v2
         with:
           username: ${{ secrets.DOCKERHUB_USERNAME }}
-          password: $ {{ secret.DOCKERHUB_TOKEN }}
+          password: ${{ secrets.DOCKERHUB_TOKEN }}
 
-      - name: Build & push frontend image(multi-arch)
+      - name: Build & push frontend image (multi-arch)
         uses: docker/build-push-action@v5
         with:
           context: ./frontend
@@ -69,7 +77,7 @@ jobs:
           push: true
           platforms: linux/amd64,linux/arm64
           tags: |
-            ${{env.IMAGE_NAMESPACES}}/frontend-gh-build-arm64:latest
-            ${{env.IMAGE_NAMESPACES}}/frontend-gh-build-arm64:${{ github.sha }}
+            ${{ env.IMAGE_NAMESPACE }}/frontend-gh-build-arm64:latest
+            ${{ env.IMAGE_NAMESPACE }}/frontend-gh-build-arm64:${{ github.sha }}
           cache-from: type=gha
-          cache-to: type=gha, mode=max
+          cache-to: type=gha,mode=max
