--- a/.github/workflows/docker-build.yml
+++ b/.github/workflows/docker-build.yml
@@ -2,37 +2,31 @@ name: Build and push multi-arch Docker images
 
 on:
   push:
-    branches: [ main]
+    branches: [ main, master ]
   workflow_dispatch:
 
 env:
-  # Namespace (DockerHub repo owner)
   IMAGE_NAMESPACE: ${{ secrets.DOCKERHUB_USERNAME }}
 
 jobs:
-  # 1️⃣ prepare builder
-  setup-buildx:
+  build-images:
     runs-on: ubuntu-latest
+
     steps:
       - name: Checkout
         uses: actions/checkout@v4
 
-      - name: Enable QEMU for multi-arch builds
+      - name: Set up QEMU for multi-arch builds
         uses: docker/setup-qemu-action@v3
 
-      - name: Set up Docker Buildx builder
+      - name: Set up Docker Buildx (container driver)
         uses: docker/setup-buildx-action@v2
         with:
           driver: docker-container
+          buildkitd-flags: --debug
           install: true
-
-  # 2️⃣ backend image
-  build-backend:
-    needs: setup-buildx
-    runs-on: ubuntu-latest
-    steps:
-      - name: Checkout code
-        uses: actions/checkout@v4
+          use: true
+          name: multiarchbuilder
 
       - name: Login to DockerHub
         uses: docker/login-action@v2
@@ -40,38 +34,26 @@ jobs:
           username: ${{ secrets.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_TOKEN }}
 
+      # 🧱 build backend
       - name: Build & push backend image (multi-arch)
         uses: docker/build-push-action@v5
         with:
+          builder: multiarchbuilder
           context: ./backend
           file: ./backend/Dockerfile
           push: true
-          # Build for both amd64 and arm64
           platforms: linux/amd64,linux/arm64
-          # Custom tags
           tags: |
             ${{ env.IMAGE_NAMESPACE }}/backend-gh-build-arm64:latest
             ${{ env.IMAGE_NAMESPACE }}/backend-gh-build-arm64:${{ github.sha }}
           cache-from: type=gha
           cache-to: type=gha,mode=max
 
-  # 3️⃣ frontend image
-  build-frontend:
-    needs: setup-buildx
-    runs-on: ubuntu-latest
-    steps:
-      - name: Checkout code
-        uses: actions/checkout@v4
-
-      - name: Login to DockerHub
-        uses: docker/login-action@v2
-        with:
-          username: ${{ secrets.DOCKERHUB_USERNAME }}
-          password: ${{ secrets.DOCKERHUB_TOKEN }}
-
+      # 🎨 build frontend
       - name: Build & push frontend image (multi-arch)
         uses: docker/build-push-action@v5
         with:
+          builder: multiarchbuilder
           context: ./frontend
           file: ./frontend/Dockerfile
           push: true
