--- a/.github/workflows/docker-build.yml
+++ b/.github/workflows/docker-build.yml
@@ -9,36 +9,49 @@ env:
   IMAGE_NAMESPACE: ${{ secrets.DOCKERHUB_USERNAME }}
 
 jobs:
-  build-images:
+  setup-buildx:
     runs-on: ubuntu-latest
+    outputs:
+      builder-name: ${{ steps.buildx.outputs.name }}
 
     steps:
       - name: Checkout
         uses: actions/checkout@v4
 
-      - name: Set up QEMU for multi-arch builds
+      - name: Set up QEMU
         uses: docker/setup-qemu-action@v3
 
-      - name: Set up Docker Buildx (container driver)
-        uses: docker/setup-buildx-action@v2
+      - name: Create Buildx builder
+        id: buildx
+        uses: docker/setup-buildx-action@v3
         with:
           driver: docker-container
           buildkitd-flags: --debug
           install: true
           use: true
-          name: multiarchbuilder
+
+  build-images:
+    runs-on: ubuntu-latest
+    needs: setup-buildx
+
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v4
 
       - name: Login to DockerHub
-        uses: docker/login-action@v2
+        uses: docker/login-action@v3
         with:
           username: ${{ secrets.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_TOKEN }}
+
+      - name: Use Buildx builder
+        run: docker buildx use ${{ needs.setup-buildx.outputs.builder-name }}
 
       # 🧱 build backend
       - name: Build & push backend image (multi-arch)
         uses: docker/build-push-action@v5
         with:
-          builder: multiarchbuilder
+          builder: ${{ needs.setup-buildx.outputs.builder-name }}
           context: ./backend
           file: ./backend/Dockerfile
           push: true
@@ -53,7 +66,7 @@ jobs:
       - name: Build & push frontend image (multi-arch)
         uses: docker/build-push-action@v5
         with:
-          builder: multiarchbuilder
+          builder: ${{ needs.setup-buildx.outputs.builder-name }}
           context: ./frontend
           file: ./frontend/Dockerfile
           push: true
