--- a/.github/workflows/docker-build.yml
+++ b/.github/workflows/docker-build.yml
@@ -9,19 +9,20 @@ env:
   IMAGE_NAMESPACE: ${{ secrets.DOCKERHUB_USERNAME }}
 
 jobs:
-  setup-buildx:
+  build-and-push:
     runs-on: ubuntu-latest
-    outputs:
-      builder-name: ${{ steps.buildx.outputs.name }}
 
     steps:
+      # 1️⃣ Checkout code
       - name: Checkout
         uses: actions/checkout@v4
 
+      # 2️⃣ Setup QEMU (for ARM builds)
       - name: Set up QEMU
         uses: docker/setup-qemu-action@v3
 
-      - name: Create Buildx builder
+      # 3️⃣ Setup Buildx (multi-arch builder)
+      - name: Set up Docker Buildx
         id: buildx
         uses: docker/setup-buildx-action@v3
         with:
@@ -30,28 +31,17 @@ jobs:
           install: true
           use: true
 
-  build-images:
-    runs-on: ubuntu-latest
-    needs: setup-buildx
-
-    steps:
-      - name: Checkout
-        uses: actions/checkout@v4
-
+      # 4️⃣ Login to Docker Hub
       - name: Login to DockerHub
         uses: docker/login-action@v3
         with:
           username: ${{ secrets.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_TOKEN }}
 
-      - name: Use Buildx builder
-        run: docker buildx use ${{ needs.setup-buildx.outputs.builder-name }}
-
-      # 🧱 build backend
-      - name: Build & push backend image (multi-arch)
+      # 5️⃣ Build & Push Backend Image
+      - name: Build and push backend image (multi-arch)
         uses: docker/build-push-action@v5
         with:
-          builder: ${{ needs.setup-buildx.outputs.builder-name }}
           context: ./backend
           file: ./backend/Dockerfile
           push: true
@@ -62,11 +52,10 @@ jobs:
           cache-from: type=gha
           cache-to: type=gha,mode=max
 
-      # 🎨 build frontend
-      - name: Build & push frontend image (multi-arch)
+      # 6️⃣ Build & Push Frontend Image
+      - name: Build and push frontend image (multi-arch)
         uses: docker/build-push-action@v5
         with:
-          builder: ${{ needs.setup-buildx.outputs.builder-name }}
           context: ./frontend
           file: ./frontend/Dockerfile
           push: true
