--- a/backend/package.json
+++ b/backend/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "scripts": {
     "start": "node ./bin/www",
+    "start:dev": "cp -r .env-dev .env; node ./bin/www",
     "server": "DEBUG=uni-server:* bun start",
     "lint": "eslint ."
   },
