--- a/frontend/package.json
+++ b/frontend/package.json
@@ -8,6 +8,7 @@
     "@testing-library/react": "^16.3.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.13.1",
+    "dayjs": "^1.11.19",
     "ramda": "^0.32.0",
     "ramda-extension": "^0.13.0",
     "react": "^19.2.0",
@@ -20,6 +21,7 @@
   },
   "scripts": {
     "start": "react-scripts start",
+    "start:dev": "cp -r .env-dev .env; react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
@@ -44,10 +46,10 @@
     ]
   },
   "devDependencies": {
-    "@eslint/js": "^9.38.0",
-    "eslint": "^8.57.1",
+    "@eslint/js": "^9.39.1",
+    "eslint": "^9.39.1",
     "eslint-config-react-app": "^7.0.1",
     "eslint-plugin-react": "^7.37.5",
-    "globals": "^16.4.0"
+    "globals": "^16.5.0"
   }
 }
