--- a/frontend-deployment.yaml
+++ b/frontend-deployment.yaml
@@ -5,17 +5,19 @@ apiVersion: v1
 kind: ConfigMap
 metadata:
   name: frontend-config
+  namespace: news-app
 data:
   REACT_APP_API_URL: "http://192.168.101.71:32001"
 
 ---
 # ==========================
-# 🐱‍💻 2. Deployment
+# 💻 2. Deployment
 # ==========================
 apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: frontend
+  namespace: news-app
 spec:
   replicas: 1
   selector:
@@ -26,11 +28,9 @@ spec:
       labels:
         app: frontend
     spec:
-      imagePullSecrets:
-        - name: ecr-secret
       containers:
         - name: frontend
-          image: systemail150/news-frontend:latest  
+          image: systemail150/news-frontend-arm64:latest
           ports:
             - containerPort: 80
           envFrom:
@@ -45,6 +45,7 @@ apiVersion: v1
 kind: Service
 metadata:
   name: frontend-service
+  namespace: news-app
 spec:
   selector:
     app: frontend
