Login Problem Fixed

--- a/frontend/nginx.conf
+++ b/frontend/nginx.conf
@@ -1,12 +1,23 @@
 server {
     listen 80;
-    server_name localhost;
+    server_name akrutimedia.com www.akrutimedia.com;
+
     root /usr/share/nginx/html;
     index index.html;
 
-    # React Router: serve index.html for all routes
+    # React Router support
     location / {
-        try_files $uri $uri/ /index.html;
+        try_files $uri /index.html;
+    }
+
+    # API proxy
+    location /api/ {
+        proxy_pass http://backend:3001/;  # <-- backend container name
+        proxy_http_version 1.1;
+        proxy_set_header Upgrade $http_upgrade;
+        proxy_set_header Connection 'upgrade';
+        proxy_set_header Host $host;
+        proxy_cache_bypass $http_upgrade;
     }
 
     # Cache static assets
@@ -15,7 +26,6 @@ server {
         add_header Cache-Control "public, immutable";
     }
 
-    # Error pages
+    # Error pages fallback
     error_page 404 /index.html;
 }
-
