--- a/frontend/.env-prod
+++ b/frontend/.env-prod
@@ -1,3 +1,3 @@
 # Use this ip address for internal communication
 REACT_APP_API_URL=http://backend-service:3001
-# REACT_APP_API_URL=http://13.235.247.22:3001
+# REACT_APP_API_URL=https://akrutimedia.com/api
