--- a/.github/workflows/docker-build.yml
+++ b/.github/workflows/docker-build.yml
@@ -27,25 +27,37 @@ jobs:
         with:
           fetch-depth: 0
 
-      # 2️⃣ Detect changed folders
+      # 2️⃣ Bulletproof Folder Change Detection
       - name: Detect changed folders
         run: |
-          git fetch --depth=2
-          CHANGED=$(git diff --name-only HEAD~1 HEAD)
+          echo "Comparing commits:"
+          echo "Before: ${{ github.event.before }}"
+          echo "After:  ${{ github.sha }}"
+
+          CHANGED=$(git diff --name-only ${{ github.event.before }} ${{ github.sha }})
           echo "Changed files:"
           echo "$CHANGED"
 
-          ([[ "$CHANGED" =~ ^frontend/ ]]) && echo "FRONTEND_CHANGED=true" >> $GITHUB_ENV || echo "FRONTEND_CHANGED=false" >> $GITHUB_ENV
-          ([[ "$CHANGED" =~ ^backend/ ]]) && echo "BACKEND_CHANGED=true" >> $GITHUB_ENV || echo "BACKEND_CHANGED=false" >> $GITHUB_ENV
+          if echo "$CHANGED" | grep -q "^frontend/"; then
+            echo "FRONTEND_CHANGED=true" >> $GITHUB_ENV
+          else
+            echo "FRONTEND_CHANGED=false" >> $GITHUB_ENV
+          fi
+
+          if echo "$CHANGED" | grep -q "^backend/"; then
+            echo "BACKEND_CHANGED=true" >> $GITHUB_ENV
+          else
+            echo "BACKEND_CHANGED=false" >> $GITHUB_ENV
+          fi
 
       # 3️⃣ Get latest tag
       - name: Get tag
         run: |
-          TAG=$(git describe --tags --abbrev=0 2>/dev/null || echo "v0.0.0")
+          TAG=$(git describe --tags --abbrev=0 2>/dev/null || echo "v1.0.0")
           echo "LATEST_TAG=$TAG" >> $GITHUB_ENV
           echo "Latest Tag: $TAG"
 
-      # 4️⃣ Extract version
+      # 4️⃣ Extract version parts
       - name: Extract version
         run: |
           CLEAN=${LATEST_TAG#v}
@@ -54,12 +66,12 @@ jobs:
           echo "MINOR=$MINOR" >> $GITHUB_ENV
           echo "PATCH=$PATCH" >> $GITHUB_ENV
 
-      # 5️⃣ Detect bump
+      # 5️⃣ Detect bump type
       - name: Detect bump
         run: |
           MSG=$(git log -1 --pretty=%s)
           echo "Commit Message: $MSG"
-          
+
           if echo "$MSG" | grep -q major; then 
             echo "BUMP=major" >> $GITHUB_ENV
           elif echo "$MSG" | grep -q minor; then 
@@ -69,8 +81,6 @@ jobs:
           else 
             echo "BUMP=none" >> $GITHUB_ENV
           fi
-
-          echo "Detected Bump: $BUMP"
 
       # 6️⃣ Calculate new version
       - name: Calculate new version
@@ -87,7 +97,7 @@ jobs:
 
           echo "NEW_VERSION=$NEW_VERSION" >> $GITHUB_ENV
 
-      # 7️⃣ Create tag if needed
+      # 7️⃣ Create tag (only if bump)
       - name: Push tag
         if: ${{ env.BUMP != 'none' }}
         run: |
@@ -112,7 +122,7 @@ jobs:
           username: ${{ secrets.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_TOKEN }}
 
-      # 9️⃣ Build Backend Image
+      # 9️⃣ Build Backend Image (only if backend changed)
       - name: Build Backend
         if: ${{ env.BACKEND_CHANGED == 'true' }}
         uses: docker/build-push-action@v5
@@ -125,7 +135,7 @@ jobs:
             ${{ env.IMAGE_NAMESPACE }}/backend:${{ env.NEW_VERSION }}
             ${{ env.IMAGE_NAMESPACE }}/backend:latest
 
-      # 🔟 Build Frontend Image
+      # 🔟 Build Frontend Image (only if frontend changed)
       - name: Build Frontend
         if: ${{ env.FRONTEND_CHANGED == 'true' }}
         uses: docker/build-push-action@v5
@@ -146,32 +156,32 @@ jobs:
           echo "  🚀 BUILD SUMMARY REPORT"
           echo "=============================="
           echo ""
-          echo -e "🎯 \033[1;34mCurrent Version:\033[0m    ${LATEST_TAG}"
-          echo -e "🎯 \033[1;32mNew Version:\033[0m        ${NEW_VERSION}"
-          echo -e "🎯 \033[1;33mBump Type:\033[0m          ${BUMP}"
+          echo -e "🎯 Current Version:    ${LATEST_TAG}"
+          echo -e "🎯 New Version:        ${NEW_VERSION}"
+          echo -e "🎯 Bump Type:          ${BUMP}"
           echo ""
 
           if [[ "${BACKEND_CHANGED}" == "true" ]]; then
-            echo -e "🛠️  \033[1;32mBackend Built:\033[0m YES"
-            echo -e "      → Image: $IMAGE_NAMESPACE/backend:${NEW_VERSION}"
-            echo -e "      → Image: $IMAGE_NAMESPACE/backend:latest"
+            echo -e "🛠️ Backend Built: YES"
+            echo -e "     → backend:${NEW_VERSION}"
+            echo -e "     → backend:latest"
           else
-            echo -e "🛠️  \033[1;31mBackend Built:\033[0m NO (no changes detected)"
+            echo -e "🛠️ Backend Built: NO (no changes)"
           fi
           echo ""
 
           if [[ "${FRONTEND_CHANGED}" == "true" ]]; then
-            echo -e "🛠️  \033[1;32mFrontend Built:\033[0m YES"
-            echo -e "      → Image: $IMAGE_NAMESPACE/frontend:${NEW_VERSION}"
-            echo -e "      → Image: $IMAGE_NAMESPACE/frontend:latest"
+            echo -e "🛠️ Frontend Built: YES"
+            echo -e "     → frontend:${NEW_VERSION}"
+            echo -e "     → frontend:latest"
           else
-            echo -e "🛠️  \033[1;31mFrontend Built:\033[0m NO (no changes detected)"
+            echo -e "🛠️ Frontend Built: NO (no changes)"
           fi
           echo ""
 
           END_TIME=$(date +%s)
           DURATION=$((END_TIME - GITHUB_WORKFLOW_STARTED_AT))
-          echo -e "⏱️  \033[1;36mTotal Build Time:\033[0m ${DURATION} seconds"
+          echo -e "⏱️ Total Build Time: ${DURATION} seconds"
           echo ""
           echo "=============================="
           echo "🎉 BUILD COMPLETED SUCCESSFULLY"
