--- a/.github/workflows/docker-build.yml
+++ b/.github/workflows/docker-build.yml
@@ -1,45 +1,132 @@
-name: Build and push multi-arch Docker images
+#This new script is used with tagging/versioning enabled with docker build
+name: Versioned Docker Build (Always Build After Version Bump)
+
 
 on:
   push:
-    branches: [ main, master ]
+    branches:
+      - main
   workflow_dispatch:
 
 env:
   IMAGE_NAMESPACE: ${{ secrets.DOCKERHUB_USERNAME }}
 
 jobs:
-  build-and-push:
+  version-and-build:
     runs-on: ubuntu-latest
+    permissions:
+      contents: write
 
     steps:
-      # 1️⃣ Checkout code
+
+      # 0️⃣ Record Workflow Start Time
+      - name: Record workflow start time
+        run: echo "GITHUB_WORKFLOW_STARTED_AT=$(date +%s)" >> $GITHUB_ENV
+
+      # 1️⃣ Checkout
       - name: Checkout
         uses: actions/checkout@v4
+        with:
+          fetch-depth: 0
 
-      # 2️⃣ Setup QEMU (for ARM builds)
-      - name: Set up QEMU
+      # 2️⃣ Bulletproof Folder Change Detection
+      - name: Detect changed folders
+        run: |
+          echo "Comparing commits:"
+          echo "Before: ${{ github.event.before }}"
+          echo "After:  ${{ github.sha }}"
+
+          CHANGED=$(git diff --name-only ${{ github.event.before }} ${{ github.sha }})
+          echo "Changed files:"
+          echo "$CHANGED"
+
+          if echo "$CHANGED" | grep -q "^frontend/"; then
+            echo "FRONTEND_CHANGED=true" >> $GITHUB_ENV
+          else
+            echo "FRONTEND_CHANGED=false" >> $GITHUB_ENV
+          fi
+
+          if echo "$CHANGED" | grep -q "^backend/"; then
+            echo "BACKEND_CHANGED=true" >> $GITHUB_ENV
+          else
+            echo "BACKEND_CHANGED=false" >> $GITHUB_ENV
+          fi
+
+      # 3️⃣ Get latest tag
+      - name: Get tag
+        run: |
+          TAG=$(git describe --tags --abbrev=0 2>/dev/null || echo "v1.0.0")
+          echo "LATEST_TAG=$TAG" >> $GITHUB_ENV
+          echo "Latest Tag: $TAG"
+
+      # 4️⃣ Extract version parts
+      - name: Extract version
+        run: |
+          CLEAN=${LATEST_TAG#v}
+          IFS='.' read -r MAJOR MINOR PATCH <<< "$CLEAN"
+          echo "MAJOR=$MAJOR" >> $GITHUB_ENV
+          echo "MINOR=$MINOR" >> $GITHUB_ENV
+          echo "PATCH=$PATCH" >> $GITHUB_ENV
+
+      # 5️⃣ Detect bump type
+      - name: Detect bump
+        run: |
+          MSG=$(git log -1 --pretty=%s)
+          echo "Commit Message: $MSG"
+
+          if echo "$MSG" | grep -q major; then 
+            echo "BUMP=major" >> $GITHUB_ENV
+          elif echo "$MSG" | grep -q minor; then 
+            echo "BUMP=minor" >> $GITHUB_ENV
+          elif echo "$MSG" | grep -q patch; then 
+            echo "BUMP=patch" >> $GITHUB_ENV
+          else 
+            echo "BUMP=none" >> $GITHUB_ENV
+          fi
+
+      # 6️⃣ Calculate new version
+      - name: Calculate new version
+        run: |
+          if [[ "$BUMP" == "major" ]]; then 
+            NEW_VERSION="v$((MAJOR+1)).0.0"
+          elif [[ "$BUMP" == "minor" ]]; then 
+            NEW_VERSION="v$MAJOR.$((MINOR+1)).0"
+          elif [[ "$BUMP" == "patch" ]]; then 
+            NEW_VERSION="v$MAJOR.$MINOR.$((PATCH+1))"
+          else 
+            NEW_VERSION="$LATEST_TAG"
+          fi
+
+          echo "NEW_VERSION=$NEW_VERSION" >> $GITHUB_ENV
+
+      # 7️⃣ Create tag (only if bump)
+      - name: Push tag
+        if: ${{ env.BUMP != 'none' }}
+        run: |
+          git config user.name "github-actions"
+          git config user.email "actions@github.com"
+          git tag -a "$NEW_VERSION" -m "Release $NEW_VERSION"
+          git push origin "$NEW_VERSION"
+
+      # 8️⃣ Setup Docker
+      - name: Setup Docker
+        run: echo "Initializing Docker build system..."
+
+      - name: QEMU
         uses: docker/setup-qemu-action@v3
 
-      # 3️⃣ Setup Buildx (multi-arch builder)
-      - name: Set up Docker Buildx
-        id: buildx
+      - name: Buildx
         uses: docker/setup-buildx-action@v3
-        with:
-          driver: docker-container
-          buildkitd-flags: --debug
-          install: true
-          use: true
 
-      # 4️⃣ Login to Docker Hub
       - name: Login to DockerHub
         uses: docker/login-action@v3
         with:
           username: ${{ secrets.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_TOKEN }}
 
-      # 5️⃣ Build & Push Backend Image
-      - name: Build and push backend image (multi-arch)
+      # 9️⃣ Build Backend Image (only if backend changed)
+      - name: Build Backend
+        if: ${{ env.BACKEND_CHANGED == 'true' }}
         uses: docker/build-push-action@v5
         with:
           context: ./backend
@@ -47,13 +134,12 @@ jobs:
           push: true
           platforms: linux/amd64,linux/arm64
           tags: |
-            ${{ env.IMAGE_NAMESPACE }}/backend-gh-build-arm64:latest
-            ${{ env.IMAGE_NAMESPACE }}/backend-gh-build-arm64:${{ github.sha }}
-          cache-from: type=gha
-          cache-to: type=gha,mode=max
+            ${{ env.IMAGE_NAMESPACE }}/backend:${{ env.NEW_VERSION }}
+            ${{ env.IMAGE_NAMESPACE }}/backend:latest
 
-      # 6️⃣ Build & Push Frontend Image
-      - name: Build and push frontend image (multi-arch)
+      # 🔟 Build Frontend Image (only if frontend changed)
+      - name: Build Frontend
+        if: ${{ env.FRONTEND_CHANGED == 'true' }}
         uses: docker/build-push-action@v5
         with:
           context: ./frontend
@@ -61,7 +147,45 @@ jobs:
           push: true
           platforms: linux/amd64,linux/arm64
           tags: |
-            ${{ env.IMAGE_NAMESPACE }}/frontend-gh-build-arm64:latest
-            ${{ env.IMAGE_NAMESPACE }}/frontend-gh-build-arm64:${{ github.sha }}
-          cache-from: type=gha
-          cache-to: type=gha,mode=max
+            ${{ env.IMAGE_NAMESPACE }}/frontend:${{ env.NEW_VERSION }}
+            ${{ env.IMAGE_NAMESPACE }}/frontend:latest
+
+      # 1️⃣1️⃣ Advanced Final Output Summary
+      - name: Final output (Advanced)
+        run: |
+          echo ""
+          echo "=============================="
+          echo "  🚀 BUILD SUMMARY REPORT"
+          echo "=============================="
+          echo ""
+          echo -e "🎯 Current Version:    ${LATEST_TAG}"
+          echo -e "🎯 New Version:        ${NEW_VERSION}"
+          echo -e "🎯 Bump Type:          ${BUMP}"
+          echo ""
+
+          if [[ "${BACKEND_CHANGED}" == "true" ]]; then
+            echo -e "🛠️ Backend Built: YES"
+            echo -e "     → backend:${NEW_VERSION}"
+            echo -e "     → backend:latest"
+          else
+            echo -e "🛠️ Backend Built: NO (no changes)"
+          fi
+          echo ""
+
+          if [[ "${FRONTEND_CHANGED}" == "true" ]]; then
+            echo -e "🛠️ Frontend Built: YES"
+            echo -e "     → frontend:${NEW_VERSION}"
+            echo -e "     → frontend:latest"
+          else
+            echo -e "🛠️ Frontend Built: NO (no changes)"
+          fi
+          echo ""
+
+          END_TIME=$(date +%s)
+          DURATION=$((END_TIME - GITHUB_WORKFLOW_STARTED_AT))
+          echo -e "⏱️ Total Build Time: ${DURATION} seconds"
+          echo ""
+          echo "=============================="
+          echo "🎉 BUILD COMPLETED SUCCESSFULLY"
+          echo "=============================="
+          
