--- a/.github/workflows/docker-build.yml
+++ b/.github/workflows/docker-build.yml
@@ -1,5 +1,5 @@
-#This new script is used with tagging/versioning enabled with docker build
-name: Versioned Docker Build (Always Build After Version Bump)
+# Versioned Docker Build with ALWAYS-BUILD on Version Bump (Option B)
+name: Versioned Docker Build
 
 on:
   push:
@@ -22,43 +22,45 @@ jobs:
       - name: Record workflow start time
         run: echo "GITHUB_WORKFLOW_STARTED_AT=$(date +%s)" >> $GITHUB_ENV
 
-      # 1️⃣ Checkout
+      # 1️⃣ Checkout Repository
       - name: Checkout
         uses: actions/checkout@v4
         with:
           fetch-depth: 0
 
-      # 2️⃣ Bulletproof Folder Change Detection
+      # 2️⃣ Bulletproof Change Detection (no more bad commit errors)
       - name: Detect changed folders
         run: |
-          echo "Comparing commits:"
-          echo "Before: ${{ github.event.before }}"
-          echo "After:  ${{ github.sha }}"
+          BEFORE=${{ github.event.before }}
+          AFTER=${{ github.sha }}
 
-          CHANGED=$(git diff --name-only ${{ github.event.before }} ${{ github.sha }})
-          echo "Changed files:"
+          echo "Before: $BEFORE"
+          echo "After:  $AFTER"
+
+          # Check if BEFORE commit exists, otherwise fallback to HEAD~1
+          if git cat-file -e "$BEFORE"^{commit} 2>/dev/null; then
+            echo "Using BEFORE commit from GitHub event."
+            RANGE="$BEFORE $AFTER"
+          else
+            echo "BEFORE commit does NOT exist. Using fallback HEAD~1."
+            RANGE="HEAD~1 HEAD"
+          fi
+
+          echo "Diff Range: $RANGE"
+
+          CHANGED=$(git diff --name-only $RANGE)
           echo "$CHANGED"
 
-          if echo "$CHANGED" | grep -q "^frontend/"; then
-            echo "FRONTEND_CHANGED=true" >> $GITHUB_ENV
-          else
-            echo "FRONTEND_CHANGED=false" >> $GITHUB_ENV
-          fi
+          [[ "$CHANGED" =~ ^frontend/ ]] && echo "FRONTEND_CHANGED=true" >> $GITHUB_ENV || echo "FRONTEND_CHANGED=false" >> $GITHUB_ENV
+          [[ "$CHANGED" =~ ^backend/ ]] && echo "BACKEND_CHANGED=true" >> $GITHUB_ENV || echo "BACKEND_CHANGED=false" >> $GITHUB_ENV
 
-          if echo "$CHANGED" | grep -q "^backend/"; then
-            echo "BACKEND_CHANGED=true" >> $GITHUB_ENV
-          else
-            echo "BACKEND_CHANGED=false" >> $GITHUB_ENV
-          fi
-
-      # 3️⃣ Get latest tag
+      # 3️⃣ Get latest version tag
       - name: Get tag
         run: |
           TAG=$(git describe --tags --abbrev=0 2>/dev/null || echo "v0.0.0")
           echo "LATEST_TAG=$TAG" >> $GITHUB_ENV
-          echo "Latest Tag: $TAG"
 
-      # 4️⃣ Extract version parts
+      # 4️⃣ Extract major/minor/patch
       - name: Extract version
         run: |
           CLEAN=${LATEST_TAG#v}
@@ -67,7 +69,7 @@ jobs:
           echo "MINOR=$MINOR" >> $GITHUB_ENV
           echo "PATCH=$PATCH" >> $GITHUB_ENV
 
-      # 5️⃣ Detect bump type (new syntax major:, minor:, patch:)
+      # 5️⃣ Detect bump type using new commit style: major:, minor:, patch:
       - name: Detect bump
         run: |
           MSG=$(git log -1 --pretty=%s)
@@ -75,13 +77,10 @@ jobs:
 
           if echo "$MSG" | grep -iq "^major:"; then 
             echo "BUMP=major" >> $GITHUB_ENV
-
           elif echo "$MSG" | grep -iq "^minor:"; then 
             echo "BUMP=minor" >> $GITHUB_ENV
-
           elif echo "$MSG" | grep -iq "^patch:"; then 
             echo "BUMP=patch" >> $GITHUB_ENV
-
           else 
             echo "BUMP=none" >> $GITHUB_ENV
           fi
@@ -101,7 +100,7 @@ jobs:
 
           echo "NEW_VERSION=$NEW_VERSION" >> $GITHUB_ENV
 
-      # 7️⃣ Create tag (only if bump)
+      # 7️⃣ Create tag only when bump detected
       - name: Push tag
         if: ${{ env.BUMP != 'none' }}
         run: |
@@ -110,9 +109,9 @@ jobs:
           git tag -a "$NEW_VERSION" -m "Release $NEW_VERSION"
           git push origin "$NEW_VERSION"
 
-      # 8️⃣ Setup Docker
+      # 8️⃣ Setup Docker Builder
       - name: Setup Docker
-        run: echo "Initializing Docker build system..."
+        run: echo "Initializing Docker build..."
 
       - name: QEMU
         uses: docker/setup-qemu-action@v3
@@ -126,7 +125,7 @@ jobs:
           username: ${{ secrets.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_TOKEN }}
 
-      # 9️⃣ Build Backend Image (always build if bump)
+      # 9️⃣ Build Backend Image (Always build on version bump)
       - name: Build Backend
         if: ${{ env.BUMP != 'none' }}
         uses: docker/build-push-action@v5
@@ -139,7 +138,7 @@ jobs:
             ${{ env.IMAGE_NAMESPACE }}/backend:${{ env.NEW_VERSION }}
             ${{ env.IMAGE_NAMESPACE }}/backend:latest
 
-      # 🔟 Build Frontend Image (always build if bump)
+      # 🔟 Build Frontend Image (Always build on version bump)
       - name: Build Frontend
         if: ${{ env.BUMP != 'none' }}
         uses: docker/build-push-action@v5
@@ -152,7 +151,7 @@ jobs:
             ${{ env.IMAGE_NAMESPACE }}/frontend:${{ env.NEW_VERSION }}
             ${{ env.IMAGE_NAMESPACE }}/frontend:latest
 
-      # 1️⃣1️⃣ Advanced Final Output Summary
+      # 1️⃣1️⃣ Final Beautiful Output
       - name: Final output (Advanced)
         run: |
           echo ""
@@ -160,24 +159,23 @@ jobs:
           echo "  🚀 BUILD SUMMARY REPORT"
           echo "=============================="
           echo ""
-          echo -e "🎯 Current Version:    ${LATEST_TAG}"
-          echo -e "🎯 New Version:        ${NEW_VERSION}"
-          echo -e "🎯 Bump Type:          ${BUMP}"
+          echo "🎯 Current Version: $LATEST_TAG"
+          echo "🎯 New Version:     $NEW_VERSION"
+          echo "🎯 Bump Type:       $BUMP"
           echo ""
 
-          if [[ "${BUMP}" != "none" ]]; then
-            echo -e "🛠️ Backend Built: YES"
-            echo -e "🛠️ Frontend Built: YES"
+          if [[ "$BUMP" != "none" ]]; then
+            echo "🛠️ Backend Built:  YES"
+            echo "🛠️ Frontend Built: YES"
           else
-            echo -e "🛠️ Backend Built: NO"
-            echo -e "🛠️ Frontend Built: NO"
+            echo "🛠️ Backend Built:  NO (no bump)"
+            echo "🛠️ Frontend Built: NO (no bump)"
           fi
-
-          echo ""
 
           END_TIME=$(date +%s)
           DURATION=$((END_TIME - GITHUB_WORKFLOW_STARTED_AT))
-          echo -e "⏱️ Total Build Time: ${DURATION} seconds"
+          echo ""
+          echo "⏱️ Total Build Time: ${DURATION} seconds"
           echo ""
           echo "=============================="
           echo "🎉 BUILD COMPLETED SUCCESSFULLY"
